# airflow

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: load_clean_split.py
data/dataset_1/processed/: label_mapping.json  y_test.csv  y_train.csv
data/processed/: X_test.csv  X_train.csv
src/app/visualize/: corelation.py
src/data_pipeline/: extract.py  load.py  transform.py
src/scripts/: check_data.py  inspect_data.py
