[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-project"
version = "0.1.0"
description = "Airflow project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "apache-airflow>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}


